--- a/todolist/src/private/Schedule.css
+++ b/todolist/src/private/Schedule.css
@@ -1,10 +1,10 @@
 
 .react-calendar{
-  width: 90vw;
-  height: 65vh;
+  width: 80vw;
+  height: 78vh;
   border: none;
   border: 1px solid grey;
-  border-radius: 20px 20px 0 0;
+  /* border-radius: 20px 20px 0 0; */
 }
 
 /* 상단 년 월 */
@@ -12,7 +12,7 @@
   background: rgb(255, 152, 152);
   border-bottom: brown;
   height: 10vh;
-  border-radius: 20px 20px 0 0;
+  /* border-radius: 20px 20px 0 0; */
   span {
     font-size: 1.6em;
     font-weight:800;
