--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: 'HakgyoansimGeurimilgiTTF-R';
   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimGeurimilgiTTF-R.woff2') format('woff2');
   font-weight: normal;
@@ -9,24 +9,26 @@
   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/PartialSansKR-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
-}
+} */
+
+
 
 .private>p{
-  font-family: 'PartialSansKR-Regular';
-  font-size: 16px;
+  /* font-family: 'PartialSansKR-Regular'; */
+  font-size: 18px;
 }
 
 .contailner{
-  font-family: 'HakgyoansimGeurimilgiTTF-R';
-  font-size: 18px;
+  /* font-family: 'HakgyoansimGeurimilgiTTF-R'; */
+  font-size: 16px;
   width: 98vw;
-  height: 99vh;
+  height: 100vh;
   display: flex;
 }
 
 .mainbar{
   background-color: #FCFAF8;
-  width: 25vw;
+  width: 20vw;
   height: 100vh;
 }
 
@@ -49,14 +51,9 @@
   gap: 10px;
 }
 
-.public{
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
 
-.private > span:hover,
-.public > span:hover{
+
+.private > span:hover{
   cursor: pointer;
   font-weight: 700;
 }
@@ -82,4 +79,12 @@ h2{
   /* background-color:  lightcoral; */
   color:black;
   font-weight: 900;
+}
+
+.todo-wrap{
+  /* border: 1px solid red; */
+  width: 100%;
+  height: 100%;
+  /* margin: auto; */
+  /* text-align: center; */
 }
