--- a/todolist/src/private/Todo.css
+++ b/todolist/src/private/Todo.css
@@ -30,7 +30,7 @@
 
 .addTask-div > button{
     width: 10%;
-    margin-left: 10px;
+    margin-left: 5px;
     border: 1px solid lightgray;
 }
 
@@ -42,7 +42,7 @@
 .today-content > span{
     margin-left: 10px;
     margin-bottom:5px;
-    width: 70%;
+    width: 60%;
     display: inline-block;
     border-bottom: 1px solid darkgray;
     
@@ -53,12 +53,33 @@
     margin-right: 5px;
 
 }
+.col{
+    margin: 10px 0px;
+    height: 15vh;
+    width: 15vw;
+}
+
+
+
+.done-col-content {
+    min-height: 100%; /* 내용에 따라 높이 조정 */
+    width: 90%;
+    text-align: left;
+    padding: 10px;
+    background-color: #F7F7CB;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.10), 0 3px 6px rgba(0, 0, 0, 0.23);
+    margin-left: 5px;
+    word-wrap: break-word; /* 긴 텍스트 줄바꿈 */
+    overflow-wrap: break-word; /* 호환성 유지 */
+}
+
+
 
 /* 반응형 스타일 */
 @media screen and (max-width: 768px) {
     .addTask-div > input{
         font-size: 1em;
-        width: 60%;
+        width: 75%;
     }
 
     .addTask-div > button{
@@ -78,10 +99,16 @@
         width: 50%;
     }
      
-
+  
 }
 
 @media screen and (max-width: 480px) {
+
+    .todo-wrap > h2{
+        font-weight: 600;
+        font-size: 1.4em;
+    }
+
     .addTask-div > input{
         font-size: 0.8em;
         width: 60%;
