--- a/todolist/src/private/Todo.css
+++ b/todolist/src/private/Todo.css
@@ -66,7 +66,7 @@
     width: 90%;
     text-align: left;
     padding: 10px;
-    background-color: #F7F7CB;
+    background-color: #FCFAF8;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.10), 0 3px 6px rgba(0, 0, 0, 0.23);
     margin-left: 5px;
     word-wrap: break-word; /* 긴 텍스트 줄바꿈 */
