--- a/todolist/src/private/Schedule.css
+++ b/todolist/src/private/Schedule.css
@@ -88,7 +88,7 @@
   width: 100%;
   display: flex;
   justify-content: flex-start;
-  gap: 20px;
+  gap: 10px;
 }
 
 /* 캘린더 내용 */
@@ -112,12 +112,10 @@
 /* 캘린더 영역 */
 .calendar-wrap {
   width: 100%;
-  position: relative;
 }
 
 .calendar-wrap > h2{
   font-weight: 600;
-
 }
 
 .calendar-wrap > h4{
@@ -126,6 +124,7 @@
 
 .calendar-add-div{
   width: 100%;
+  margin: auto;
 }
 
 /* .calendar-add-img{
@@ -150,7 +149,7 @@
   padding: 5px;
   border: 1px solid lightgray;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 
 }
 
